--- a/js/Languages/lang.json
+++ b/js/Languages/lang.json
@@ -1,89 +1,88 @@
 {
-   "es":{
-       "home":"Inicio",
-       "about":"Sobre mi",
-       "project":"Proyectos",
-       "publications":"Publicaciones",
-       "contact":"Contacto",
-       "Languages":"Idiomas",
-       "Download":"Descargar CV",
-       "more":"more",
-       "title1":"Hola, soy Melissa Orellana",
-       "title2":"Una estudiante de Ing en Sistema",
-       "title3":"Sobre mí",
-       "title4":"Nombre: Melissa Estefania Diaz Orellana",
-       "title5":"Estudiante de la universidad Gerardo Barrios de la facultad de ciencia y tecnología y curso la carrera de Ing. en sistemas y redes informáticas y actualmente estoy cursando séptimo ciclo de mi cuarto año universitario y estoy aprendiendo más sobre la gestión de proyectos y al desarrollo web, también tengo conocimientos básicos sobre la creación de circuitos del área de electrónica y robótica como también de administración de redes y sobre modelaje y animación por computadora.",
-       "title6":"Publicaciones",
-       "title7":"Mediante vaya avanzando mi formación académica y profesional se van a ir publicando ensayos, artículos u otros elementos escritos por mi persona en este momento esta sección se encuentra en mantenimiento.",
-       "title8":"Diseño web",
-    "title9":"El diseño web es una actividad que consiste en la planificación, diseño, implementación y mantenimiento de sitios web. No es simplemente la implementación del diseño convencional ya que se abarcan diferentes aspectos como el diseño gráfico web, diseño de interfaz y experiencia de usuario, como la navegabilidad, interactividad, usabilidad, arquitectura de la información.",
-    "title10":"Desarrollo web",
-    "title11":"Desarrollo web es un término que define la creación de sitios web para Internet o una intranet. Para conseguirlo se hace uso de tecnologías de software del lado del servidor y del cliente que involucran una combinación de procesos de base de datos con el uso de un navegador web a fin de realizar determinadas tareas o mostrar información.",
-    "title12":"Aplicación Android",
-    "title13":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-    "title14":"Fotografía",
-    "title15":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-    "title16":"Redacción de contenido",
-    "title17":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-    "title18":"Edición de video",
-    "title19":"",
-    "title20":"Proyectos",
-    "title21":"Agro Producers",
-    "title22":"Forme parte del área de gestión en el desarrollo del proyecto el cual está basado para ayudar a los productores agrícolas a poder comercializar sus productos mediante la app web y que los usuarios puedan ingresar hacer sus compras.",
-    "title23":"Generador de energía ",
-    "title24":"Creación desde cero de la fuente de energía la cual se realizó en las prácticas de la materia electrónica análoga en la cual participe en su creación ya que fue creada por un grupo de trabajo del cual forme parte.",
-    "title25":"DevEvaluación",
-    "title28":"Forme parte del área de gestión en el desarrollo del proyecto el cual está basado en la evaluación de historias de usuarios con estándares ISO 25010.",
-    "title29":"Contacta conmigo",
-    "title30":"",
-    "title31":"Datos de contacto",
-    "title32":"Dirección",
-    "title33":"Teléfono",
-    "title34":"Correo electrónico",
-    "title35":"Envia un mensaje"
-    
+   "es": {
+      "home": "Inicio",
+      "about": "Sobre mi",
+      "project": "Proyectos",
+      "publications": "Publicaciones",
+      "contact": "Contacto",
+      "Languages": "Idiomas",
+      "Download": "Descargar CV",
+      "more": "Leer mas",
+      "title1": "Hola, soy Melissa Orellana",
+      "title2": "Estudiante de ingenieria en Sistema",
+      "title3": "Sobre mí",
+      "title4": "Melissa Estefania Diaz Orellana",
+      "title5": "Estudiante de ingeniería en sistemas y redes informáticas, actualmente esta cursando su cuarto año de la carrera, ha aprendido sobre la gestión de proyectos y sigue expandiendo el aprendizaje, también un poco sobre desarrollo web, está interesada en la maquetación de sitios y aplicaciones web de lo cual piensa en un futuro especializarse en la maquetación web.      También tiene un conocimiento básico acerca de los circuitos electrónicos y robótica, conocimientos acerca de la creación y administración de base de datos SQL y NoSQL como pueden ser MySQL Server, SQL server, Oracle, Casandra DB.      Posee conocimientos básicos sobre lo que es modelaje y animación por computadora.      Tiene muchas metas propuestas pero la principal por ahora esta en graduarse de ingeniería en sistemas y redes informáticas y poder desenvolverse en el ámbito laboral",
+      "title6": "Publicaciones",
+      "title7": "Mediante vaya avanzando mi formación académica y profesional se van a ir publicando ensayos, artículos u otros elementos escritos por mi persona en este momento esta sección se encuentra en mantenimiento.",
+      "title8": "Diseño web",
+      "title9": "El diseño web es una actividad que consiste en la planificación, diseño, implementación y mantenimiento de sitios web. No es simplemente la implementación del diseño convencional ya que se abarcan diferentes aspectos como el diseño gráfico web, diseño de interfaz y experiencia de usuario, como la navegabilidad, interactividad, usabilidad, arquitectura de la información.",
+      "title10": "Desarrollo web",
+      "title11": "Desarrollo web es un término que define la creación de sitios web para Internet o una intranet. Para conseguirlo se hace uso de tecnologías de software del lado del servidor y del cliente que involucran una combinación de procesos de base de datos con el uso de un navegador web a fin de realizar determinadas tareas o mostrar información.",
+      "title12": "Aplicación Android",
+      "title13": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+      "title14": "Fotografía",
+      "title15": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+      "title16": "Redacción de contenido",
+      "title17": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+      "title18": "Edición de video",
+      "title19": "",
+      "title20": "Proyectos",
+      "title21": "Agro Producers",
+      "title22": "Forme parte del área de gestión en el desarrollo del proyecto el cual está basado para ayudar a los productores agrícolas a poder comercializar sus productos mediante la app web y que los usuarios puedan ingresar hacer sus compras.",
+      "title23": "Generador de energía ",
+      "title24": "Creación desde cero de la fuente de energía la cual se realizó en las prácticas de la materia electrónica análoga en la cual participe en su creación ya que fue creada por un grupo de trabajo del cual forme parte.",
+      "title25": "DevEvaluación",
+      "title28": "Forme parte del área de gestión en el desarrollo del proyecto el cual está basado en la evaluación de historias de usuarios con estándares ISO 25010.",
+      "title29": "Contacta conmigo",
+      "title30": "",
+      "title31": "Datos de contacto",
+      "title32": "Dirección",
+      "title33": "Teléfono",
+      "title34": "Correo electrónico",
+      "title35": "Envia un mensaje"
    },
-   "en":{
-    "home":"Home",
-    "about":"about",
-    "Project":"Project ",
-    "publications":"publications",
-    "contact":"Contact",
-    "Languages":"Languages",
-    "Download":"Download CV",
-    "more":"leer mas",
-    "title1":"Hello, I'm Melissa Orellana",
-    "title2":"Student of System Engineering",
-    "title3":"About me ",
-    "title4":"Name: Melissa Estefania Diaz Orellana",
-    "title5":"Student at the Gerardo Barrios University of the Faculty of Science and Technology and I am studying Engineering in computer systems and networks and I am currently in the seventh cycle of my fourth year of university and I am learning more about project management and web development, I also have basic knowledge about the creation of circuits in the area of electronics and robotics as well as network administration and about modeling and computer animation.",
-    "title6":"publications",
-    "title7":"As my academic and professional training progress, essays, articles or other elements written by me will be published at this time this section is under maintenance.",
-    "title8":"Web Disign",
-    "title9":"Web design is an activity that consists of the planning, design, implementation and maintenance of websites. It is not simply the implementation of conventional design since different aspects such as web graphic design, interface design and user experience are covered, such as navigability, interactivity, usability, information architecture.",
-    "title10":"Web Development",
-    "title11":"Web development is a term that defines the creation of websites for the Internet or an intranet. To achieve this, use is made of software technologies on the server and client sides that involve a combination of database processes with the use of a web browser in order to perform certain tasks or display information.",
-    "title12":"Android App",
-    "title13":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-    "title14":"Photography",
-    "title15":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-    "title16":"Content Writing",
-    "title17":"Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
-    "title18":"Video Editing",
-    "title19":"",
-    "title20":"Projects",
-    "title21":"Agro Producers",
-    "title22":"Be part of the management area in the development of the project which is based to help agricultural producers to be able to market their products through the web app and that users can enter to make their purchases.",
-    "title23":"Energy generator",
-    "title24":"Creation from scratch of the energy source which was carried out in the practices of the analog electronic matter in which I participated in its creation since it was created by a working group of which it is part.",
-    "title25":"DevEvaluation",
-    "title28":"Be part of the management area in the development of the project which is based on the evaluation of user stories with ISO 25010 standards.",
-    "title29":"Contact Me",
-    "title30":"",
-    "title31":"Contact Info",
-    "title32":"Address",
-    "title33":"Phome",
-    "title34":"Email",
-    "title35":"Message Me"
-   } 
+   "en": {
+      "home": "Home",
+      "about": "about",
+      "Project": "Project ",
+      "publications": "publications",
+      "contact": "Contact",
+      "Languages": "Languages",
+      "Download": "Download CV",
+      "more": "Read More",
+      "title1": "Hello, I'm Melissa Orellana",
+      "title2": "Student of System Engineering",
+      "title3": "About me ",
+      "title4": "Melissa Estefania Diaz Orellana",
+      "title5": "Engineering student in computer systems and networks, currently in her fourth year of the degree, she has learned about project management and continues to expand her learning, also a little about web development, she is interested in the layout of websites and web applications of which thinks in the future specializing in web layout. He also has a basic knowledge about electronic circuits and robotics, knowledge of the creation and administration of SQL and NoSQL databases such as: MySQL Server, SQL server, Oracle, Casandra DB. Has basic knowledge of what is computer modeling and animation. He has many proposed goals but the main one for now is to graduate in engineering in computer systems and networks and to be able to function in the workplace",
+      "title6": "publications",
+      "title7": "As my academic and professional training progress, essays, articles or other elements written by me will be published at this time this section is under maintenance.",
+      "title8": "Web Disign",
+      "title9": "Web design is an activity that consists of the planning, design, implementation and maintenance of websites. It is not simply the implementation of conventional design since different aspects such as web graphic design, interface design and user experience are covered, such as navigability, interactivity, usability, information architecture.",
+      "title10": "Web Development",
+      "title11": "Web development is a term that defines the creation of websites for the Internet or an intranet. To achieve this, use is made of software technologies on the server and client sides that involve a combination of database processes with the use of a web browser in order to perform certain tasks or display information.",
+      "title12": "Android App",
+      "title13": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+      "title14": "Photography",
+      "title15": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+      "title16": "Content Writing",
+      "title17": "Lorem ipsum dolor sit amet consectetur adipisicing elit.Quaerat dolores inventore vitae atque natus quam iste.",
+      "title18": "Video Editing",
+      "title19": "",
+      "title20": "Projects",
+      "title21": "Agro Producers",
+      "title22": "Be part of the management area in the development of the project which is based to help agricultural producers to be able to market their products through the web app and that users can enter to make their purchases.",
+      "title23": "Energy generator",
+      "title24": "Creation from scratch of the energy source which was carried out in the practices of the analog electronic matter in which I participated in its creation since it was created by a working group of which it is part.",
+      "title25": "DevEvaluation",
+      "title28": "Be part of the management area in the development of the project which is based on the evaluation of user stories with ISO 25010 standards.",
+      "title29": "Contact Me",
+      "title30": "",
+      "title31": "Contact Info",
+      "title32": "Address",
+      "title33": "Phome",
+      "title34": "Email",
+      "title35": "Message Me"
+   }
 }
